--- a/petshop/package.json
+++ b/petshop/package.json
@@ -1,10 +1,14 @@
 {
   "name": "study-dapps-petshop",
+  "description": "An improved version of the Truffle pet shop tutorial.",
   "version": "0.1.0",
-  "description": "",
+  "author": "Conrado Quilles Gomes <conradoqg@gmail.com>",
+  "homepage": "https://github.com/conradoqg/study-dapps/tree/master/petshop",
+  "license": "MIT",
   "main": "truffle.js",
-  "directories": {
-    "test": "test"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/conradoqg/study-dapps.git"
   },
   "scripts": {
     "compile": "truffle compile",
@@ -12,9 +16,7 @@
     "testrpc": "testrpc",
     "dev": "lite-server",
     "test": "truffle test"
-  },
-  "author": "",
-  "license": "MIT",
+  },  
   "devDependencies": {
     "ethereumjs-testrpc": "^4.0.1",
     "lite-server": "^2.3.0",
