--- a/tutorialtoken/package.json
+++ b/tutorialtoken/package.json
@@ -1,6 +1,6 @@
 {
   "name": "study-dapps-tutorialtoken",  
-  "description": "Default sample of the tutorial token from Truffle Netowrk",
+  "description": "Sample of the tutorial token from Truffle Netowrk",
   "version": "0.1.0", 
   "author": "Conrado Quilles Gomes <conradoqg@gmail.com>",
   "homepage": "https://github.com/conradoqg/study-dapps/tree/master/tutorialtoken",
@@ -11,16 +11,11 @@
     "url": "https://github.com/conradoqg/study-dapps.git"
   },
   "scripts": {
-    "compile": "truffle compile",
-    "migrate": "truffle migrate",
-    "testrpc": "testrpc",
     "dev": "lite-server",
     "test": "truffle test"
   },  
-  "devDependencies": {
-    "ethereumjs-testrpc": "^4.1.1",
-    "lite-server": "^2.3.0",
-    "truffle": "^3.4.9",
+  "devDependencies": {    
+    "lite-server": "^2.3.0",    
     "zeppelin-solidity": "^1.2.0"
   }
 }
